--- a/scss/tinymce/_tinymce-content.scss
+++ b/scss/tinymce/_tinymce-content.scss
@@ -1,57 +1,6 @@
 & {
-
 	padding: var(--content-padding) !important;
-	min-height: 150px;
+	// min-height: 150px;
 	height: auto;
 	max-height: 600px;
-
-	blockquote {
-		border-left: 2px solid var(--blades-grey-bright);
-		margin-left: 1.5rem;
-		padding-left: 1rem;
-	}
-
-	table {
-		border-collapse: collapse;
-
-		th, td {
-			border: 1px solid var(--blades-grey);
-			padding: 0.4rem;
-		}
-	}
-
-	figure {
-		display: table;
-		margin: 1rem auto;
-
-		figcaption {
-			font-family: var(--font-default-small);
-			color: var(--blades-grey-bright);
-			display: block;
-			margin-top: 0.25rem;
-			text-align: center;
-		}
-	}
-
-	hr {
-		border-color: var(--blades-grey-bright);
-		border-style: solid;
-		border-width: 1px 0 0 0;
-	}
-
-	code {
-		padding: 0.1rem 0.2rem;
-	}
-
-	.text-secret {
-		display: var(--secret-text-display);
-		background-color: var(--blades-black-dark);
-		color: var(--blades-grey);
-		font-weight: bold;
-		font-style: italic;
-		border-radius: 3px;
-		outline: 1px dotted var(--blades-white);
-		padding: 0 #{toRem(5px)};
-		margin: 0 #{toRem(5px)};
-	}
 }
